# sanjarfirm3dcode

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  README.md  build_script  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  ruff.yml
docs/: README.md  api.rst  conf.py  contributing.rst  examples.rst  guiding_center.rst  index.rst  installation.rst  magnetic_axis.rst  magnetic_fields.rst  poincare_maps.rst  requirements.txt  shear_alfven_waves.rst  solvers.rst  stopping_criteria.rst  trajectory_saving.rst
docs/_static/: README_images.md  custom.css
docs/_templates/: layout.html
examples/: run_all_examples.sh
examples/fusion_distribution/: fusion_distribution.py
examples/fusion_distribution_perturbed/: fusion_distribution_perturbed.py
examples/passing_frequencies/: passing_frequencies.py
examples/passing_map_perturbed_QA/: passing_map_perturbed.py
examples/passing_map_perturbed_QH/: passing_map_perturbed.py
examples/passing_map_unperturbed/: passing_map.py
examples/plot_trajectory/: plot_trajectory.py
examples/resolution_scan/: resolution_scan.py
examples/tracing_with_AE/: ChooseAE.ipynb  tracing_with_AE.py
examples/trapped_frequencies/: trapped_frequencies.py
examples/trapped_map/: trapped_map.py
examples/trapped_map_QI/: trapped_map_QI.py
examples/uniform_surf_distribution/: uniform_surf_distribution.py
examples/uniform_vol_distribution/: uniform_vol_distribution.py
install/macOS/: install_simsopt_osx.sh
install/perlmutter/: install_simsopt_perlmutter.sh
src/simsoptpp/: boozermagneticfield.h  boozermagneticfield_interpolated.h  boozermagneticfield_interpolated_impl.h  (+15 more)
(+21 files in other folders)
