[build-system]
requires = ["setuptools","cmake","wheel","ninja","pybind11<=2.13.6","numpy","plotly"]
build-backend = "setuptools.build_meta"

[project]
name = "simsopt"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scipy>=1.5.4",
    "Deprecated>=1.2.10",
    "nptyping>=1.3.0",
    "ruamel.yaml",
    "plotly",
    "jupyter",
    "pyevtk",
    "matplotlib",
    "booz-xform>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "mpi4py>=3.0.3",
    "pytest",
    "pytest-cov"
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
    "numpy",
    "matplotlib",
    "scipy"
]

[tool.ruff]
line-length = 88
exclude = [
    "thirdparty/",
    "build/",
    "dist/",
    "docs/",
    "*.egg-info",
    ".git",
    ".ruff_cache",
    "__pycache__"
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E731", "E741", "E722", "N816", "N803", "N806", "N802"]
